Fixed overflow issue issue where info-section headers would clip and square when text wrapped.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -166,7 +166,7 @@ li {
 .info-section-header {
   display: flex;
   flex-direction: row;
-  height: var(--info-section-header-height);
+  min-height: var(--info-section-header-height);
   cursor: pointer;
   background-color: cornflowerblue;
 }
